@@ -35,7 +35,7 @@ cimport numpy as np
 from libc.math cimport HUGE_VAL
 
 from rasterio._base cimport _osr_from_crs, get_driver_name, _safe_osr_release
-from rasterio._err cimport exc_wrap_pointer, exc_wrap_int
+from rasterio._err cimport exc_wrap, exc_wrap_pointer, exc_wrap_int
 from rasterio._io cimport (
     DatasetReaderBase, MemoryDataset, in_dtype_range, io_auto)
 from rasterio._features cimport GeomBuilder, OGRGeomBuilder
@@ -610,9 +610,19 @@ def _reproject(
             src_mem.close()
 
 
-def _calculate_default_transform(src_crs, dst_crs, width, height,
-                                 left=None, bottom=None, right=None, top=None,
-                                 gcps=None, rpcs=None, **kwargs):
+def _calculate_default_transform(
+    src_crs,
+    dst_crs,
+    width,
+    height,
+    left=None,
+    bottom=None,
+    right=None,
+    top=None,
+    gcps=None,
+    rpcs=None,
+    **kwargs
+):
     """Wraps GDAL's algorithm."""
     cdef void *hTransformArg = NULL
     cdef int npixels = 0
@@ -627,9 +637,6 @@ def _calculate_default_transform(src_crs, dst_crs, width, height,
 
     extent[:] = [0.0, 0.0, 0.0, 0.0]
     geotransform[:] = [0.0, 0.0, 0.0, 0.0, 0.0, 0.0]
-
-    # Make an in-memory raster dataset we can pass to
-    # GDALCreateGenImgProjTransformer().
 
     if all(x is not None for x in (left, bottom, right, top)):
         transform = from_bounds(left, bottom, right, top, width, height)
@@ -652,56 +659,76 @@ def _calculate_default_transform(src_crs, dst_crs, width, height,
     elif isinstance(src_crs, dict):
         src_crs = CRS(**src_crs)
 
-    vrt_doc = _suggested_proxy_vrt_doc(width, height, transform=transform, crs=src_crs, gcps=gcps).decode('ascii')
+    # The transformer at the heart of this function requires a dataset.
+    # We use an in-memory VRT dataset.
+    vrt_doc = _suggested_proxy_vrt_doc(
+        width,
+        height,
+        transform=transform,
+        crs=src_crs,
+        gcps=gcps
+    ).decode('ascii')
+    hds = open_dataset(vrt_doc, 0x00 | 0x02 | 0x04, ['VRT'], {}, None)
 
     try:
         imgProjOptions = CSLSetNameValue(imgProjOptions, "GCPS_OK", "TRUE")
         imgProjOptions = CSLSetNameValue(imgProjOptions, "MAX_GCP_ORDER", "0")
         imgProjOptions = CSLSetNameValue(imgProjOptions, "DST_SRS", wkt)
+
         for key, val in kwargs.items():
             key = key.upper().encode('utf-8')
+
             if key == b"RPC_DEM":
-                # don't .upper() since might be a path
+                # don't .upper() since might be a path.
                 val = str(val).encode('utf-8')
             else:
                 val = str(val).upper().encode('utf-8')
-            imgProjOptions = CSLSetNameValue(
-                imgProjOptions, <const char *>key, <const char *>val)
-            log.debug("Set _calculate_default_transform Transformer option {0!r}={1!r}".format(key, val))
-        hds = open_dataset(vrt_doc, 0x00 | 0x02 | 0x04, ['VRT'], {}, None)
+
+            imgProjOptions = CSLSetNameValue(imgProjOptions, <const char *>key, <const char *>val)
+            log.debug("Set image projection option {0!r}={1!r}".format(key, val))
+
         if rpcs:
             if hasattr(rpcs, 'to_gdal'):
                 rpcs = rpcs.to_gdal()
+
             for key, val in rpcs.items():
                 key = key.upper().encode('utf-8')
                 val = str(val).encode('utf-8')
-                papszMD = CSLSetNameValue(
-                    papszMD, <const char *>key, <const char *>val)
+                papszMD = CSLSetNameValue(papszMD, <const char *>key, <const char *>val)
+
             exc_wrap_int(GDALSetMetadata(hds, papszMD, "RPC"))
             imgProjOptions = CSLSetNameValue(imgProjOptions, "SRC_METHOD", "RPC")
 
         hTransformArg = exc_wrap_pointer(
             GDALCreateGenImgProjTransformer2(hds, NULL, imgProjOptions)
         )
-        exc_wrap_int(
-            GDALSuggestedWarpOutput2(
-                hds, GDALGenImgProjTransform, hTransformArg,
-                geotransform, &npixels, &nlines, extent, 0))
 
-        log.debug("Created transformer and warp output.")
+        try:
+            # This function may put errors on GDAL's error stack while
+            # still returning 0 (no error). Thus we always check and
+            # clear the stack and ignore the error if the function
+            # succeeds.
+            retval = GDALSuggestedWarpOutput2(
+                hds,
+                GDALGenImgProjTransform,
+                hTransformArg,
+                geotransform,
+                &npixels,
+                &nlines,
+                extent,
+                0
+            )
+            _ = exc_wrap(1)
+
+        except CPLE_AppDefinedError as err:
+            if retval == 0:
+                log.info("Ignoring error: err=%r", err)
+            else:
+                raise err
 
     except CPLE_NotSupportedError as err:
         raise CRSError(err.errmsg)
 
-    except CPLE_AppDefinedError as err:
-        if "Reprojection failed" in str(err):
-            # This "exception" should be treated as a debug msg, not error
-            # "Reprojection failed, err = -14, further errors will be
-            # suppressed on the transform object."
-            log.info("Encountered points outside of valid dst crs region")
-            pass
-        else:
-            raise err
     finally:
         if wkt != NULL:
             CPLFree(wkt)
@@ -714,12 +741,11 @@ def _calculate_default_transform(src_crs, dst_crs, width, height,
         if papszMD != NULL:
             CSLDestroy(papszMD)
 
-    # Convert those modified arguments to Python values.
     dst_affine = Affine.from_gdal(*[geotransform[i] for i in range(6)])
     dst_width = npixels
     dst_height = nlines
 
-    return dst_affine, dst_width, dst_height
+    return (dst_affine, dst_width, dst_height)
 
 
 DEFAULT_NODATA_FLAG = object()
@@ -733,28 +759,58 @@ cdef GDALDatasetH auto_create_warped_vrt(
     double dfMaxError,
     const GDALWarpOptions *psOptions,
     const char **transformer_options,
-) nogil:
+):
+    """Makes a best-fit WarpedVRT around a dataset.
+
+    Returns
+    -------
+    GDALDatasetH
+        Owned by the caller.
+
+    """
+    cdef GDALDatasetH hds_warped = NULL
 
     IF (CTE_GDAL_MAJOR_VERSION, CTE_GDAL_MINOR_VERSION) >= (3, 2):
-        return GDALAutoCreateWarpedVRTEx(
-            hSrcDS,
-            pszSrcWKT,
-            pszDstWKT,
-            eResampleAlg,
-            dfMaxError,
-            psOptions,
-            transformer_options,
-        )
-
+        try:
+            # This function may put errors on GDAL's error stack while
+            # still returning 0 (no error). Thus we always check and
+            # clear the stack and ignore the error if the function
+            # succeeds.
+            with nogil:
+                hds_warped = GDALAutoCreateWarpedVRTEx(
+                    hSrcDS,
+                    pszSrcWKT,
+                    pszDstWKT,
+                    eResampleAlg,
+                    dfMaxError,
+                    psOptions,
+                    transformer_options,
+                )
+            _ = exc_wrap(0)
+        except CPLE_AppDefinedError as err:
+            if hds_warped != NULL:
+                log.info("Ignoring error: err=%r", err)
+            else:
+                raise err
     ELSE:
-        return GDALAutoCreateWarpedVRT(
-            hSrcDS,
-            pszSrcWKT,
-            pszDstWKT,
-            eResampleAlg,
-            dfMaxError,
-            psOptions,
-        )
+        try:
+            with nogil:
+                hds_dataset = GDALAutoCreateWarpedVRT(
+                    hSrcDS,
+                    pszSrcWKT,
+                    pszDstWKT,
+                    eResampleAlg,
+                    dfMaxError,
+                    psOptions,
+                )
+            _ = exc_wrap(0)
+        except CPLE_AppDefinedError as err:
+            if hds_warped != NULL:
+                log.info("Ignoring error: err=%r", err)
+            else:
+                raise err
+
+    return hds_warped
 
 
 cdef class WarpedVRTReaderBase(DatasetReaderBase):
@@ -993,8 +1049,7 @@ cdef class WarpedVRTReaderBase(DatasetReaderBase):
 
         # Case 4
         if not self.dst_transform and (not self.dst_width or not self.dst_height):
-
-            with nogil:
+            try:
                 hds_warped = auto_create_warped_vrt(
                     hds,
                     src_crs_wkt,
@@ -1004,9 +1059,14 @@ cdef class WarpedVRTReaderBase(DatasetReaderBase):
                     psWOptions,
                     <const char **>c_warp_extras,
                 )
+            finally:
+                CPLFree(dst_crs_wkt)
+                CPLFree(src_crs_wkt)
+                CSLDestroy(c_warp_extras)
+                if psWOptions != NULL:
+                    GDALDestroyWarpOptions(psWOptions)
 
         else:
-
             # Case 1
             if self.dst_transform and self.dst_width and self.dst_height:
                 pass
@@ -1021,7 +1081,10 @@ cdef class WarpedVRTReaderBase(DatasetReaderBase):
                 and not self.src_dataset.rpcs
             ):
 
-                self.dst_transform = Affine.scale(self.src_dataset.width / self.dst_width, self.src_dataset.height / self.dst_height) * self.src_transform
+                self.dst_transform = Affine.scale(
+                    self.src_dataset.width / self.dst_width,
+                    self.src_dataset.height / self.dst_height
+                ) * self.src_transform
 
             # Case 3
             elif (
@@ -1030,7 +1093,6 @@ cdef class WarpedVRTReaderBase(DatasetReaderBase):
                 and self.dst_height
                 and not self.dst_transform
             ):
-
                 left, bottom, right, top = self.src_dataset.bounds
                 self.dst_transform, width, height = _calculate_default_transform(
                     self.src_crs,
@@ -1045,13 +1107,23 @@ cdef class WarpedVRTReaderBase(DatasetReaderBase):
                     rpcs=self.src_dataset.rpcs,
                     **self.warp_extras,
                 )
-                self.dst_transform = Affine.scale(width / self.dst_width, height / self.dst_height ) * self.dst_transform
+                self.dst_transform = Affine.scale(
+                    width / self.dst_width,
+                    height / self.dst_height
+                ) * self.dst_transform
 
-            # If we get here it's because the tests above are buggy. We raise a Python exception to indicate that.
+            # If we get here it's because the tests above are buggy.
+            # We raise a Python exception to indicate that.
             else:
-                raise RuntimeError(
-                    "Parameterization error: src_crs={!r}, dst_crs={!r}, dst_width={!r}, dst_height={!r}, dst_transform={!r}".format(self.src_crs, self.dst_crs, self.dst_width, self.dst_height, self.dst_transform))
+                CPLFree(dst_crs_wkt)
+                CPLFree(src_crs_wkt)
+                CSLDestroy(c_warp_extras)
+                if psWOptions != NULL:
+                    GDALDestroyWarpOptions(psWOptions)
+                raise RuntimeError("Parameterization error")
 
+            # Continue with finishing cases 1-3, which have been
+            # generalized.
             t = self.src_transform.to_gdal()
             for i in range(6):
                 src_gt[i] = t[i]
@@ -1076,19 +1148,18 @@ cdef class WarpedVRTReaderBase(DatasetReaderBase):
                     psWOptions.pfnTransformer = GDALApproxTransform
                     GDALApproxTransformerOwnsSubtransformer(hTransformArg, 1)
 
-            except Exception:
+                psWOptions.pTransformerArg = hTransformArg
+
+                with nogil:
+                    hds_warped = GDALCreateWarpedVRT(hds, c_width, c_height, dst_gt, psWOptions)
+                    GDALSetProjection(hds_warped, dst_crs_wkt)
+
+            finally:
                 CPLFree(dst_crs_wkt)
                 CPLFree(src_crs_wkt)
                 CSLDestroy(c_warp_extras)
                 if psWOptions != NULL:
                     GDALDestroyWarpOptions(psWOptions)
-
-            else:
-                psWOptions.pTransformerArg = hTransformArg
-
-            with nogil:
-                hds_warped = GDALCreateWarpedVRT(hds, c_width, c_height, dst_gt, psWOptions)
-                GDALSetProjection(hds_warped, dst_crs_wkt)
 
         # End of the 4 cases.
 
@@ -1097,13 +1168,6 @@ cdef class WarpedVRTReaderBase(DatasetReaderBase):
 
         except CPLE_OpenFailedError as err:
             raise RasterioIOError(err.errmsg)
-
-        finally:
-            CPLFree(dst_crs_wkt)
-            CPLFree(src_crs_wkt)
-            CSLDestroy(c_warp_extras)
-            if psWOptions != NULL:
-                GDALDestroyWarpOptions(psWOptions)
 
         if self.dst_nodata is None:
             for i in self.indexes:
